--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
 
+# Ignore assets
+/[Aa]ssets/Asset
+/[Aa]ssets/Plugins
+
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
 
