--- a/Assets/EncaPlugin/Editor/enesozdemir.enca-plugin.asmdef
+++ b/Assets/EncaPlugin/Editor/enesozdemir.enca-plugin.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "enesozdemir.EncaPlugins",
+    "name": "enesozdemir.enca-plugin",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [
