--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ ProjectSettings
 Packages
 UserSettings
 .idea
+#Assets
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
