--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ Packages
 UserSettings
 .idea
 #Assets
+aAssets
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
