Empty game object creation tool added for initial Unity Setup ("Managers", "Setup", "Environment", "Canvasses", "Systems")

--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,7 @@ ProjectSettings
 Packages
 UserSettings
 .idea
-#Assets
-aAssets
+Assets
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
