--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.enesozdemir.enca-plugin",
-  "version": "0.0.1",
-  "displayName": "Enca Plugin",
+  "version": "0.0.2",
+  "displayName": "Enca plugin",
   "description": "Small extensions that I find useful in my projects.",
   "keywords": [
     "library",
